update current decklist page

--- a/current-decklist.html
+++ b/current-decklist.html
@@ -78,7 +78,7 @@
 				</p>
 
 				<p>
-					4x
+					3x
 					<span class="card-name">
 						<a>
 							Fiery Islet:
@@ -87,11 +87,11 @@
 					<span class="card-image-span">
 						<img class="card-image" src="mtg-images/fiery-islet.jpg"/>
 					</span>
-					horizon (or canopy) lands are the perfect fit for Burn. They make 4 land hands keepable and make flooding less of an issue. Without Eidolon, there's (maybe) space to play all the Red ones instead of only Sunbaked Canyon. This is just a test right now, if you want to keep it reasonable I'd advise to play 2 instead of 4. But I'm testing this configuration because I want to know just how good these when there aren't any Eidolon stressing your lifetotal.
+					horizon (or canopy) lands are the perfect fit for Burn. They make 4 land hands keepable and make flooding less of an issue. Without Eidolon, there's (maybe) space to play more of the Red ones instead of only Sunbaked Canyon. After some testing with all 4, I settled for 3. Sometimes it's a bit painful, but games where we aren't cracking them we are likely going very fast, so it's less likely it matters. On the other hand, in games where you do want to be cracking them, they'll feel nuts.
 				</p>
 
 				<p>
-					4x
+					3x
 					<span class="card-name">
 						<a>
 							Lightning Helix:
@@ -100,11 +100,11 @@
 					<span class="card-image-span">
 						<img class="card-image" src="mtg-images/lightning-helix.jpg"/>
 					</span>
-					when I first dropped Eidolon I realized that being healthy was a key aspect of Burn. You want to be healthier than your opponent so that they can't just put on the aggressor pants themselves and push you into a corner. Hence, Helix is a key part of the deck, and even though I'd drop it real fast if Chain Lightning ever became legal, it is currenly a very important slot so that I can push the canopy land count up.
+					a nice flexible spell that helps through all the self damage I've included in my list. But its biggest upside is definitely being an unconditinal instant burn spell, sometimes just holding this in case you have to remove something at instant speed is very strong.
 				</p>
 
 				<p>
-					1x
+					3x
 					<span class="card-name">
 						<a>
 							Flame Rift:
@@ -113,7 +113,7 @@
 					<span class="card-image-span">
 						<img class="card-image" src="mtg-images/flame-rift.jpg"/>
 					</span>
-					a great top up for the deck, as a 5th Boros Charm. With the 4 Helix there's also a good chance this spell doesn't push the game into a draw, and dealing 4 damage with a spell instead of 3 is enough of a big deal to make it worth it.
+					a spell dealing 4 damage instead of 3 is such a big deal that I think that playing more of these is just worth it. Remember, each spell that deals 4 pushes us to only need 6 spells resolved to win the game.
 				</p>
 
 				<p>I'm not planning to go over the sideboard choices, since they are pretty well covered in this page's sideboard guide, but if I see the need for it or if enough people ask me about them, I'll just add it here.</p>
