some sb changes, added burn matchup

--- a/sideboard-guide.html
+++ b/sideboard-guide.html
@@ -467,13 +467,12 @@
                 <p><b>Outs:</b></p>
                 <ul>
                     <li>Searing Blaze: they don't really have early targets for it, and with their great board control, it's unlikely you are actually using it to get damage through.</li>
-                    <li>Skullcrack: it's a race and they aren't gaining life, this is just a bad Lava Spike</li>
-                    <li>Lightning Helix: the lifegain is sweet, since it might represent 1 extra turn, but if you absolutely need to make cuts, this is what I'd remove next.</li>
+                    <li>Skullcrack (against Leyline of Sanctity): it's a race and they aren't gaining life, this is just a bad Lava Spike</li>
                 </ul>
                 <p><b>Ins:</b></p>
                 <ul>
                     <li>Path to Exile: messes up with their clock, and 1 extra turn in this matchups is pretty huge.</li>
-                    <li>Wear//Tear: only bring this if current lists are playing Leyline of Sanctity, which is not always a given. It sucks to need this card, but it is what it is. It can also hit Leyline Binding, which can be a cool use for them when the opponent is trying to control the board early on.</li>
+                    <li>Wear//Tear (against Leyline of Sanctity): only bring this if current lists are playing Leyline of Sanctity, which is not always a given. It sucks to need this card, but it is what it is. It can also hit Leyline Binding, which can be a cool use for them when the opponent is trying to control the board early on.</li>
                 </ul>
 
                 <h2>Hammer Time</h2>
@@ -551,8 +550,9 @@
                 </ul>
                 <p><b>Ins:</b></p>
                 <ul>
-                    <li>Skullcrack: they play Baloth in the side, and they can tutor it at any time. Luckily, they will often want to do it in a way that optimizes their mana usage, so you can likely find a window to respond to it.</li>
+                    <li>Searing Blood: even though you're cutting creatures here, Searing spells are great at keeping their board in check while evolving our own plan.</li>
                     <li>Path to Exile: the extra mana is not really relevant, they are gonna play their entire hand fast, and having a 1 mana answer that deals with anything they play (including Yawgmoth if they are about to combo) is really good.</li>
+                    <li>Skullcrack: they play Baloth in the side, and they can tutor it at any time. Luckily, they will often want to do it in a way that optimizes their mana usage, so you can likely find a window to respond to it.</li>
                 </ul>
 
                 <h2>Amulet Titan</h2>
@@ -616,19 +616,22 @@
                     <p>This one can be rough. Under normal circumstances, they are faster than us, specially since it is not hard for them to 1-shot us when they setup their board. Because they draw so many cards from cycling, they are essentially guaranteed to find relevant disruption, which positively sucks.</p>
 
                     <p>Game 1 is most likely a loss, although you can win some games if they lose a lot of life to lands and Street Wraith, or just durdle in their plan (which is possible, just not likely). Post board, we have some useful tools, but never forget that Force of Negation + Grief invalidates almost every typical sideboard choice.</p>
+
+                    <p>If they are on Leyline of Sanctity, the matchup is just terrible. There are 2 options if this is the case. Option 1: you side in the enchantment hate and try to punish them for keeping anything that isn't a good Living End just because it has Leyline of Sanctity. Option 2: take the likely loss if they happen to slam down their Leyline, but keep your deck with enought threat density to take the games where they don't. Right now, I'd say I'm a fan of option 1, because the only other non-damage card you're playing is whatever choice of graveyard hate you're packing, so you're still threat dense enough to take it.</p>
                 </p>
 
                 <p><b>Outs:</b></p>
                 <ul>
                     <li>Searing Blaze: doesnt't really hit anything in a super relevant way, and the conditional aspect of it leaves it too open for disruption.</li>
                     <li>Skullcrack: they are never really gaining life, so this is an easy cut.</li>
+                    <li>Skewer the Critics (against Leyline of Sanctity): if you need to be casting spells at yourself to trigger prowess, it's much better if they cost 1 instead of 3.</li>
                 </ul>
                 <p><b>Ins:</b></p>
                 <ul>
                     <li>Leyline of the Void: it is what it is. If you open with it, even if they remove it on curve, the whole turn you gained from it should be enough to close it out. I'd honestly always mull for it at least down to 5, because that's how unfavourable this matchup is.</li>
                     <li>Rest in Peace: if it lands, your chances of winning improve quite a bit. But their disruption package is really strong against it, and it will be an uphill battle to see this card resolved.</li>
                     <li>Roiling Vortex: dealing 6+ damage with a single card is good, but just like Rest in Peace, it may be hard to resolve it.</li>
-                    <li>Wear//Tear: these sickos play Leyline of Sanctity, so you are forced to bring this in. The one thing that might make it ok is that it hits some of their threats, and if that is ever enough to dodge lethal from a single swing, it's a win in my book.</li>
+                    <li>Wear//Tear (against Leyline of Sanctity): these sickos play Leyline of Sanctity, so you are forced to bring this in. The one thing that might make it ok is that it hits some of their threats, and if that is ever enough to dodge lethal from a single swing, it's a win in my book.</li>
                 </ul>
 
                 <h2>Archon Creativity</h2>
@@ -674,6 +677,7 @@
                     <p><b>Outs:</b></p>
                     <ul>
                         <li>Ligtning Helix: they aren't really threatening our lifetotal, so this is an easy cut.</li>
+                        <li>Rift Bolt: you're bringing Vortex in, they play Teferi Time Raveler, and when drawn late, this spell is one of the worst draws imaginable. Nnne of these reasons alone are good enough to cut it, but adding them all to the fact that there are good hate cards you might want to bring in means it is the cut to make.</li>
                     </ul>
                     <p><b>Ins:</b></p>
                     <ul>
@@ -682,6 +686,39 @@
                         <li>Leyline of the Void: same as Rest in Peace, but obviously more awkward if it gets bounced or drawn after the initial 7.</li>
                     </ul>
                 </p>
+
+                <h2>Burn</h2>
+                <p>
+                    <p>
+                        <b>How they win:</b>
+                        the secret to winning the mirror is keeping the board in your favour. That being said, a pure Burn hand can easily outrace your opponent if it contains Searing Blaze and/or Lightning Helix.
+                    </p>
+
+                    <p>This matchup is obviously very close, and although you may think that whoever is on the play has the advantage, that's not necessarily true. Remember that the player on the draw has one extra draw, and in a matchup between two critical mass decks, that's very big. So the real difference maker is being the player that plays their role better. The player on the play should start the game as the aggressor, and try to maintain that role until they win. The player on the draw starts the game in the control role. They should be removing every creature that comes down on the other side asap, even before deploying their own, and only play more aggressively once the opponent has been put on their back foot. Play your role well, and you'll be rewarded. Don't, and you'll quickly find yourself in a disadvantageous position.</p>
+
+                    <p>There are moments where the roles of the players can revert, and recognizing this is huge if you want to master the Burn mirror. If you are on the play, but your opponent drops a triple Goblin Guide opener, you can't really stay in the aggressor seat. You should immediately go on damage control and kill them all fast, UNLESS you have a hand that can reasonably race that amazing opener from the other side. Triple Guide isn't super great into double Searing Blaze + double Lightning Helix, for example. So this matchup is all about recognizing what role you should be playing.</p>
+
+                    <p>One thing I won't do is include Eidolon in the "Outs" part of this matchup, not even when you are on the draw. In my opinion, Eidolon is one of the most flexible cards in the mirror. If you're on the aggressor seat, you can use it to keep the pressure on, and your opponent either wastes a card + takes 2 damage to take care of it, or they just lose. Wasting a card isn't something we typically care about in most matchups, but in the very specific case of the Burn mirror, since it is a critical mass deck, a card is really worht quite a lot. Now, if you're the draw, Eidolon probably looks like a very bad card to try and play. But the secre is: don't try to play it on curve. When you're on the control role, Eidolon is your finisher. It's what you play after you take care of all your opponent's creatures, when they are top decking for enough gas to finish you off. Because they are now digging for spells, Eidolon is going to represent A LOT of damage against them. They either find an answer fast, or they get hit for 2 every turn + how many times they trigger Eidolon while trying to finish you. This quickly ends the game in your favour.</p>
+
+                    <p>If you are palying double White mana sideboard cards, be careful with how painfully you use your mana. Double fetch and/or shocking can be too much self damage to justify casting Kor or Sanctifier, specially since getting them removed afterwards can be game losing.</p>
+                </p>
+
+                <p><b>Outs:</b></p>
+                <ul>
+                    <li>Flame Rift: paying mana to ahve both players lose the same life is just asking for a loss in this one.</li>
+                    <li>Lava Spike: the lack of flexibility of this spell is just too much here. You need your spells to be able to hit the board, since you can be put in the controller role at a moments notice.</li>
+                    <li>Boros Charm: same reasoning as Lava Spike, but I'd cut these second since they represent card advantage, our most important stat in the mirror.</li>
+                </ul>
+
+                <p><b>Ins:</b></p>
+                <ul>
+                    <li>Kor Firewalker: even though you shouldn't run this card, it's most definitely one of the best for the mirror. One thing to be careful about: if you block a Red creature with this and a player casts Skullcrack, the protection from Red can no longer prevent damage, and Kor dies in combat.</li>
+                    <li>Deflecting Palm: it works similarly to Helix in this matchup, since it effectively gains you some life while dealing damage to your opponent, and that's always good. Just be careful with Skullcrack, since it stops Palm's damage prevention, and without preventing damage, it also deals none.</li>
+                    <li>Searing Blood: searing effects are very good in this matchup, even when you are on the aggressive role (since they clear out potential blockers, and at the very least deal 3 damage to opponents). Remember that this one only hits creatures for 2, so Swiftspear can survive it easily enough.</li>
+                    <li>Skullcrack: blanking a Lightning Helix or sniping a Kor Firewalker when they block with it is a game winning line.</li>
+                    <li>Path to Exile: arguably only good if you are sure your opp is on a Protection from Red creature, I like to board them in regardless. It's extra removal to keep your board favourable, so it won't really be a dead card often.</li>
+                    <li>Sanctifier-en-Vec: it's a permanent that attacks for 2 every turn and can be used as a roadblock for opponent creatures. Watch out for Skullcrack, just like it was described in the Kor explanation.</li>
+                </ul>
 
             </div>
         </div>
